show search with mapStruct
