# sealife/src/main/resources/static/api.yaml
@@ -27,8 +27,42 @@ paths:
                 $ref: "#/components/schemas/ObservationSheetDto"
         '400':
           description: BAD REQUEST
+  /observation-sheet/searchCriteria:
+    get:
+      summary: Find Observations by criteria
+      operationId: searchByCriteria
+      tags:
+        - observation-sheet
+      parameters:
+        - name: animalName
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ObservationSheetDto"
+        '400':
+          description: BAD REQUEST
+          content:
+            'application/json':
+              schema:
+                type: string
+        '404':
+          description: NOT FOUND
+          content:
+            'application/json':
+              schema:
+                type: string
   /species:
     get:
+      summary: Find all species
       operationId: findSpecies
       tags:
         - species
